    * Fixed an as-of-yet untriggered bug for an unusual case when multiple
      files being installed share the same content and one of the files
      is erased locally.
    * Fixed a traceback that occurred when a manually removed file switched
      packages. (CNY-869)
    * When you remove a file and replace it with a directory, conary
      treats it as a removal (CNY-872).

  o Optimizations
    * The getFileContents and getFileVersions server side calls have
      been optimized for faster execution
    * The SQL query in getTroveList has been sped up by a 3-5x factor.
    * Inserts into local database now use executemany().

  o Server Changes
    * Several SQL queries have been updated for PostgreSQL compatibility
    * dbstore now has support for executemany()

Changes in 1.0.30:
  o System Update Changes:
    These changes make Conary much more robust when applying updates
    that move files from one package to another.

    * Components that modify the same files are now required to be in
      the same update job.  For example, if a file moves from
      component a:runtime to component b:runtime, the erase of
      component a:runtime and the install of component b:runtime will
      occur at the same time. (CNY-758).
    * Files moving between components as part of a single job are now
      treated as file updates instead of separate add/remove events.
      (CNY-750, CNY-786, CNY-359)

  o Client Changes:
    * The source component is now displayed in "conary rq --info"
      output.
    * Entitlements can now be passed into ConaryClient and
      NetworkRepositoryClient objects directly. (CNY-640)
    * Exceptions raised in callback functions are now issued as
      warnings and the current job is finished before
      existing. KeyboardInterrupts and SystemExits are handled
      immediately. (CNY-806)
    * The "--debug" command line flag now provides information that is
      useful to the end-user during the update process.  The